--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Music Bot",
   "description": "Open-Source & Best Music bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
-  "repository": "https://github.com/CreateTamilan/Musicabhi-?organization=CreateTamilan&organization=CreateTamilan",
+  "repository": "https://github.com/CreateTamilan/Musicabhi-",
   "stack": "container",
   "env": {
     "SESSION_NAME": {
